--- a/public/index.html
+++ b/public/index.html
@@ -39,5 +39,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script src="https://www.paypal.com/sdk/js?client-id=AWu4Gr7EraL_vPVT-eSSzmxMyxeXC10-FCx_snyni4SBx-227bb6DllCt-yvsMnqgKUgLDMAN6BTFXP0&currency=EUR"></script>
   </body>
 </html>
