--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     <title>DiscordFoorumi</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript style="display: block; text-align: center; color: red; font-weight: bold; font-size: 2rem;">Selaimesi on suorittettava JavaScriptiä, jotta tämä aplikaatio voisi toimia!</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
